[package]
name = "spin-language-support-matrix"
version = "0.1.0"
edition = "2021"
authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]

[dependencies]
anyhow = "1.0.44"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde_json = "1.0.82"
wasmtime = "0.39.1"
spin-conformance = { path = "../spin/crates/conformance" }
